--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <nav class="titel">
-        <a href="#">Robin Benoot</a></nav>
+        <a href="#">Robin Benoot Portfolio</a></nav>
     <nav class="menu">
         <a href="index.html">Over mij</a> |
         <a href="projecten.html">Projecten</a> |
