--- a/projecten.html
+++ b/projecten.html
@@ -15,7 +15,7 @@
         <a href="index.html">Over mij</a> |
         <a href="projecten.html">Projecten</a> |
         <a href="cv.html">CV</a> |
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
     </nav>
 </header>
 
